--- a/PythonProject1/styles.css
+++ b/PythonProject1/styles.css
@@ -1,11 +1,22 @@
+
 body {
     background-color: white;
     color: white;
-    background-image: url("photo/main-house.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("photo/main-house.jpg");
+
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
     margin: 0;
+
+}
+.zen-kaku-gothic-new-regular {
+  font-family: "Zen Kaku Gothic New", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+* {
+    font-family: "Zen Kaku Gothic New", sans-serif;
 }
 div, ul, h1, p{
     margin: 0;
@@ -73,12 +84,39 @@ div, ul, h1, p{
     text-align: center;
     vertical-align: center;
 }
+#main-title > h1{
+    font-weight: 500;
+    font-size:50px;
+}
+
+#buttons-space > button {
+    font-size: 20px;
+}
+
+
+
 #main-line {
-    width: 24em;
+    width: 35em;
     height: 0.1em;
     background-color: white;
     margin-top:0.2em;
     margin: 0 auto;
     text-align: center; /* Центрирование текста внутри div */
     margin-bottom: 40em;
+}
+
+.separator {
+    width: 100%;
+    height: 99px;
+    background-color: black;
+    text-align: center;
+    padding-top: 40px;
+    font-weight: 400;
+    font-size: 35px;
+    border-radius:0 0 50px 50px;
+}
+
+#main-photo {
+    background-color: white;
+    height: 617px;
 }
