--- a/PythonProject1/templates/index.html
+++ b/PythonProject1/templates/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Турбаза "Тёплый огонёк"</title>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="hat">
@@ -16,7 +16,7 @@
         <div id="buttons-space">
             <button class="button-hat" onclick="location.href='#rooms'">Номера</button>
             <button class="button-hat" onclick="location.href='#location'">Местоположение</button>
-            <button class="button-hat" onclick="location.href='#feedbacks';">Отзывы</button>
+            <button class="button-hat" onclick="location.href='#feedback-main-separator';">Отзывы</button>
 
             <div id="contacts">
                 <ul>
@@ -122,9 +122,146 @@
     <div id="booking" class="separator">
         <button id="book-button" class="btn"><p>Забронировать</p></button>
     </div>
-    <div id="feedbacks">
-        <div class="separator">Отзывы клиентов</div>
+    <div id="reviews">
+        <div id="feedback-main-separator">Отзывы</div>
+    <div class="block slider">
+
+        <button class="btn" id="prev-feedbacks"><img src="../static/icons/cursor-right.png"></button>
+
+        <div id="slides-feedbacks">
+
+            <div class="slide">
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+            </div>
+
+            <div class="slide">
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+            </div>
+
+            <div class="slide">
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+
+                </div>
+            </div>
+
+        </div>
+                <button class="btn" id="next-feedbacks"><img src="../static/icons/cursor-right.png" ></button>
     </div>
+
+    </div>
+
     <script src="../static/index.js"></script>
 </body>
 </html>
