--- a/PythonProject1/templates/index.html
+++ b/PythonProject1/templates/index.html
@@ -110,9 +110,7 @@
         <button class="btn" id="next-room"><img src="../static/icons/cursor-right.png" ></button>
         </div>
     <div id="location">
-        <div class="separator gaps">
-            <p>Местоположение</p>
-        </div>
+        <div class="separator gaps" id="location-text">Местоположение</div>
         <div class="block block-map">
             <img src="..\static\map\map-location.jpg" id="map-img">
             <p>Турбаза расположена на западном побережье озера Байкал, в живописной бухте у подножия Приморского хребта. Ближайший населенный пункт — поселок Листвянка (15 км). Это идеальная точка для старта путешествий по озеру: до Иркутска — 70 км, а до знаменитого Кругобайкальского пути — всего 20 минут на катере.</p>
@@ -134,7 +132,9 @@
                 <div class="feedback">
                     <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
                     <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
                         <p class="name">МАКСИМ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
@@ -147,7 +147,9 @@
                 <div class="feedback">
                     <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
                     <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
                         <p class="name">МАКСИМ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
@@ -160,7 +162,9 @@
                 <div class="feedback">
                     <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
                     <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
                         <p class="name">МАКСИМ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
@@ -168,49 +172,6 @@
                         <div class="feedback-text">
                         <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
                         </div>
-
-                </div>
-            </div>
-
-            <div class="slide">
-                <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
-                    <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
-                        <p class="name">МАКСИМ</p>
-                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
-                    </div>
-                        <div class="feedback-separator"></div>
-                        <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
-                        </div>
-
-                </div>
-                <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
-                    <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
-                        <p class="name">МАКСИМ</p>
-                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
-                    </div>
-                        <div class="feedback-separator"></div>
-                        <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
-                        </div>
-
-                </div>
-                <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
-                    <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
-                        <p class="name">МАКСИМ</p>
-                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
-                    </div>
-                        <div class="feedback-separator"></div>
-                        <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
-                        </div>
-
                 </div>
             </div>
 
@@ -218,7 +179,9 @@
                 <div class="feedback">
                     <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
                     <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
                         <p class="name">МАКСИМ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
@@ -226,12 +189,13 @@
                         <div class="feedback-text">
                         <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
                         </div>
-
                 </div>
                 <div class="feedback">
                     <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
                     <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
                         <p class="name">МАКСИМ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
@@ -239,12 +203,13 @@
                         <div class="feedback-text">
                         <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
                         </div>
-
                 </div>
                 <div class="feedback">
                     <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
                     <div class="feedback-name-space">
-                        <img src="../static/photo/feedbacks/trapezoid.png" class="trapezoid">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
                         <p class="name">МАКСИМ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
@@ -252,16 +217,108 @@
                         <div class="feedback-text">
                         <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
                         </div>
+                </div>
+            </div>
 
+            <div class="slide">
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
+                        <p class="name">МАКСИМ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        </div>
                 </div>
             </div>
 
         </div>
                 <button class="btn" id="next-feedbacks"><img src="../static/icons/cursor-right.png" ></button>
     </div>
+    <div id="bottom-separator"></div>
+    <button id="review-button" class="btn">
+  <img src="../static/photo/main-house.jpg" id="review-btn-photo" alt="">
+  <span class="btn-text">Оставить отзыв</span>
+</button>
 
     </div>
 
     <script src="../static/index.js"></script>
+    <div id="footer">
+        <div id="foot-separator"><img src="../static/icons/question-mark1.png" id="foot-question"></div>
+        <div class="foot-button-space">
+            <div class="foot-button">
+                    <img src="../static/icons/phone.png" id="phone">
+                    <span id="phone-number">8-800-555-35-35</span>
+            </div>
+            <div class="foot-button">
+                <button class="btn" onclick="location.href='https://d.braev@yandex.ru'" type="button">
+                    <img src="../static/icons/email.png" id="email">
+                    <span>notascam@gmail.com</span>
+                </button>
+            </div>
+            <div class="foot-button">
+                <button class="btn" onclick="location.href='#booking'">
+                    <img src="../static/icons/ruble.png" id="rubles">
+                    <span>Прейскурант</span>
+                </button>
+            </div>
+        </div>
+        <div class="foot-button-space">
+            <div class="foot-button">
+                <button class="btn" onclick="location.href='#rooms'">
+                    <img src="../static/icons/rooms.jpg" id="foot-rooms" >
+                    <span>Гостевые номера</span>
+                </button>
+            </div>
+            <div class="foot-button">
+                <button class="btn" onclick="location.href='#reviews'">
+                    <img src="../static/icons/reviews.png" id="foot-reviews">
+                    <span>Отзывы</span>
+                </button>
+            </div>
+            <div class="foot-button">
+                <button class="btn" onclick="location.href='#booking'">
+                    <svg width="36" height="27" viewBox="0 0 36 27" fill="none" xmlns="http://www.w3.org/2000/svg" id="foot-booking">
+                    <path d="M35.2991 5.63389C35.2991 6.22913 35.0908 6.73508 34.6741 7.15175L18.5134 23.3125L15.4777 26.3482C15.061 26.7648 14.555 26.9732 13.9598 26.9732C13.3646 26.9732 12.8586 26.7648 12.4419 26.3482L9.40623 23.3125L1.32587 15.2321C0.9092 14.8154 0.700867 14.3095 0.700867 13.7142C0.700867 13.119 0.9092 12.6131 1.32587 12.1964L4.36158 9.16068C4.77825 8.74401 5.2842 8.53568 5.87944 8.53568C6.47468 8.53568 6.98063 8.74401 7.3973 9.16068L13.9598 15.7455L28.6027 1.08032C29.0193 0.663656 29.5253 0.455322 30.1205 0.455322C30.7158 0.455322 31.2217 0.663656 31.6384 1.08032L34.6741 4.11604C35.0908 4.5327 35.2991 5.03866 35.2991 5.63389Z" fill="black"/>
+                    </svg>
+                    <span>Забронировать</span>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
